ui/error handling changes

--- a/android/app/src/main/res/values/color.xml
+++ b/android/app/src/main/res/values/color.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resource>
-    <color name="splashColor">#4accf7</color>
+    <color name="splashColor">#0d1822</color>
 </resource>
